<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".landing.LandingActivity">

    <!-- Barra de navegación -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:elevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBackToMain"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/user_rounded_style"
            android:contentDescription="@string/btn_regresar_al_mainactivity_description"
            android:src="@drawable/ic_user"
            app:tint="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tittle_landing"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/btnBackToMain"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Titulo Artistas -->
    <TextView
        android:id="@+id/txtArtistas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtArtistas"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:paddingHorizontal="38dp"
        android:paddingVertical="5dp"
        app:layout_constraintTop_toBottomOf="@+id/nav"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Card Artistas -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardArtistas"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/txtArtistas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="20dp"
        android:elevation="16dp"
        android:paddingTop="50dp">
        <ImageView
            android:id="@+id/imgArtistas"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/img_artistas_description"
            android:src="@mipmap/artists"
            android:scaleType="fitXY"/>
    </androidx.cardview.widget.CardView>

    <!-- Titulo Coleccionistas -->
    <TextView
        android:id="@+id/txtColeccionistas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtColeccionistas"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="38dp"
        android:paddingVertical="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardArtistas"/>

    <!-- Card Coleccionistas -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardColecionistas"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/txtColeccionistas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="20dp">
        <ImageView
            android:id="@+id/imgColeccionistas"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/img_coleccionistas_description"
            android:src="@mipmap/collectors"
            android:scaleType="fitXY"/>
    </androidx.cardview.widget.CardView>

    <!-- Titulo Álbumes -->
    <TextView
        android:id="@+id/txtAlbumes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAlbumes"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="38dp"
        android:paddingVertical="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardColecionistas"/>

    <!-- Card Álbumes -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardAlbumes"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAlbumes"
        app:cardCornerRadius="20dp">
        <ImageView
            android:id="@+id/imgAlbumes"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@mipmap/albums"
            android:contentDescription="@string/img_Card_Album_description"
            android:scaleType="fitXY"/>
    </androidx.cardview.widget.CardView>

    <!-- Botón adicional izquierdo (Crear Álbum) -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="60dp"
        android:visibility="gone"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/act" />

    <TextView
        android:id="@+id/text_fab_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fabTxtCrearAlbum"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/descriptionFabLeft"
        app:layout_constraintBottom_toBottomOf="@id/fab_left"
        app:layout_constraintEnd_toStartOf="@id/fab_left"
        app:layout_constraintTop_toTopOf="@id/fab_left"
        android:visibility="gone" />

    <!-- Floating Action Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/act"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="Botón flotante"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add"
        tools:ignore="HardcodedText" />

    <!-- Botón adicional derecho (Asociar Track) -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="60dp"
        android:visibility="gone"
        android:contentDescription="@string/descriptionFabRight"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/act" />
    <!-- Texto para el botón 'fab_right' -->
    <TextView
        android:id="@+id/text_fab_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fabTxtAsociarTrack"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@id/fab_right"
        app:layout_constraintStart_toEndOf="@id/fab_right"
        app:layout_constraintTop_toTopOf="@id/fab_right"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
