...
    <string name="album_creation_failed">Error al crear el álbum</string>
    <string name="field_required">Este campo es obligatorio</string>
    <string name="error_connection">Error de conexión. Por favor intente de nuevo!</string>
    <string name="invalid_format">Formato inválido, use MM:SS</string>
    <string name="track_created_successfully">Track asociado a Álbum exitosamente</string>
    <string name="track_creation_failed">Error al asociar Track al álbum</string>
    <string name="sony_music">Sony Music</string>
    <string name="emi">EMI</string>
    <string name="discos_fuentes">Discos Fuentes</string>
    <string name="elektra">Elektra</string>
    <string name="fania_records">Fania Records</string>
    <string name="classical">Classical</string>
    <string name="salsa">Salsa</string>
    <string name="rock">Rock</string>
    <string name="folk">Folk</string>

</resources>
