...
    android:id="@+id/trackFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <Button
        android:id="@+id/btnUsuario3"
        android:layout_width="265dp"
        android:layout_height="92dp"
        android:layout_marginTop="308dp"
        android:text="Guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        app:helperTextTextColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_nombre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_duracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
...
